add gas visualization

--- a/Pages/AddBill.razor
+++ b/Pages/AddBill.razor
@@ -24,7 +24,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Gas Usage (mj)" Component="GasUsage" style="width: 100%" />
+                <RadzenLabel Text="Gas Usage (MJ)" Component="GasUsage" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.GasUsage" Name="GasUsage" Placeholder="0.0" ShowUpDown="false" />
