--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,17 +11,27 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Visualization
+                <span class="oi oi-home" aria-hidden="true"></span> Comparison
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="activities" Match="NavLinkMatch.All">
+                <span class="oi oi-lightbulb" aria-hidden="true"></span> Carbon Activities
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="lifestyle">
+                <span class="oi oi-cart" aria-hidden="true"></span> My Lifestyle
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bills">
-                <span class="oi oi-book" aria-hidden="true"></span> Bills
+                <span class="oi oi-book" aria-hidden="true"></span> My Bills
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="settings">
-                <span class="oi oi-people" aria-hidden="true"></span> UserProfile
+                <span class="oi oi-people" aria-hidden="true"></span> User Profile
             </NavLink>
         </div>
     </nav>
