--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,6 +9,8 @@
 @using GreenITBlazor.Shared
 @using GreenITBlazor.Services
 @using GreenITBlazor.Models
+@using GreenITBlazor.Pages.BillPages
+@using GreenITBlazor.Pages.ActivityPages
 @using Radzen
 @using Radzen.Blazor
 @using System.Security.Cryptography;
