--- a/Pages/Settings.razor
+++ b/Pages/Settings.razor
@@ -6,7 +6,7 @@
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Success" Visible="@stateVisible">@stateMessage</RadzenAlert>
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible" AllowClose="false">@errorMessage</RadzenAlert>
     <RadzenTemplateForm TItem="UserProfile" Data="@userProfile" Visible="@(userProfile != null)" Submit="@FormSubmit">
-        <RadzenRow style="margin-bottom: 1rem">
+        <RadzenRow style="margin-bottom: 1rem; margin-top: 2rem">
             <RadzenColumn SizeMD="3">
                 <RadzenLabel Text="User Name" Component="UserName" style="width: 100%" />
             </RadzenColumn>
