--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,13 +15,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="activities" Match="NavLinkMatch.All">
-                <span class="oi oi-lightbulb" aria-hidden="true"></span> Carbon Activities
+            <NavLink class="nav-link" href="footprint" Match="NavLinkMatch.All">
+                <span class="oi oi-lightbulb" aria-hidden="true"></span> Carbon Footprint
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="lifestyle">
-                <span class="oi oi-cart" aria-hidden="true"></span> My Lifestyle
+            <NavLink class="nav-link" href="activities">
+                <span class="oi oi-cart" aria-hidden="true"></span> My Activities
             </NavLink>
         </div>
         <div class="nav-item px-3">
