--- a/Pages/CarbonFootprint.razor
+++ b/Pages/CarbonFootprint.razor
@@ -1,5 +1,43 @@
 ﻿@page "/footprint"
 
 @code {
+    [Inject]
+    protected IJSRuntime JSRuntime { get; set; }
 
+    [Inject]
+    protected NavigationManager NavigationManager { get; set; }
+
+    [Inject]
+    protected DialogService DialogService { get; set; }
+
+    [Inject]
+    protected TooltipService TooltipService { get; set; }
+
+    [Inject]
+    protected ContextMenuService ContextMenuService { get; set; }
+
+    [Inject]
+    protected NotificationService NotificationService { get; set; }
+
+    [Inject]
+    public ActivitiesDBService dBService { get; set; }
+
+    [Inject]
+    public NavigationManager navigation { get; set; }
+
+    string errorMessage = "";
+    bool errorVisible = false;
+    bool electricityChartVisible = false;
+    bool gasChartVisible = false;
+    bool busy = false;
+
+    protected IEnumerable<ActivityRecord> records;
+
+    protected override void OnInitialized()
+    {
+        if (!Preferences.Default.Get("loggedin", false))
+        {
+            navigation.NavigateTo("/login");
+        }
+    }
 }
