--- a/Pages/ActivityPages/EditActivity.razor
+++ b/Pages/ActivityPages/EditActivity.razor
@@ -1,5 +1,164 @@
-﻿<h3>EditActivity</h3>
+﻿@page "/edit-activity"
+
+<PageTitle>Edit Activity</PageTitle>
+
+<RadzenColumn SizeMD=12>
+    <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible" AllowClose="false">@errorMessage</RadzenAlert>
+    <RadzenTemplateForm TItem="ActivityRecord" Data="@activityRecord" Visible="@(activityRecord != null)" Submit="@FormSubmit">
+        <RadzenRow>
+            <RadzenColumn SizeMD="3">
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenText Text="Consumption by Kg" TextStyle="TextStyle.H6" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Beef" Component="Beef" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Beef" Name="Beef" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Lamp" Component="Lamp" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Lamp" Name="Lamp" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Pork" Component="Pork" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Pork" Name="Pork" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Poultry" Component="Poultry" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Poultry" Name="Poultry" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Coffee" Component="Coffee" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Coffee" Name="Coffee" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Milk" Component="Milk" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Milk" Name="Milk" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="OliverOil" Component="OliverOil" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.OliverOil" Name="OliverOil" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Cheese" Component="Cheese" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Cheese" Name="Cheese" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Eggs" Component="Eggs" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Eggs" Name="Eggs" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Rice" Component="Rice" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Rice" Name="Rice" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenRow style="margin-bottom: 0.2rem">
+            <RadzenColumn SizeMD="3">
+                <RadzenLabel Text="Chocolate" Component="Chocolate" style="width: 100%" />
+            </RadzenColumn>
+            <RadzenColumn SizeMD="9">
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@activityRecord.Chocolate" Name="Chocolate" ShowUpDown="false" />
+            </RadzenColumn>
+        </RadzenRow>
+        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="0.5rem">
+            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Save" Variant="Variant.Flat" />
+            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancel" Variant="Variant.Flat" Click="@CancelButtonClick" />
+        </RadzenStack>
+    </RadzenTemplateForm>
+</RadzenColumn>
+
 
 @code {
+    [Inject]
+    protected IJSRuntime JSRuntime { get; set; }
 
+    [Inject]
+    protected NavigationManager NavigationManager { get; set; }
+
+    [Inject]
+    protected DialogService DialogService { get; set; }
+
+    [Inject]
+    protected TooltipService TooltipService { get; set; }
+
+    [Inject]
+    protected ContextMenuService ContextMenuService { get; set; }
+
+    [Inject]
+    protected NotificationService NotificationService { get; set; }
+
+    [Inject]
+    public ActivitiesDBService dBService { get; set; }
+
+    string errorMessage;
+    bool errorVisible;
+
+    protected ActivityRecord activityRecord;
+
+    [Parameter]
+    public int year { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        errorMessage = "";
+        activityRecord = await dBService.GetActivityRecordAsync(year);
+    }
+
+    protected async Task FormSubmit()
+    {
+        errorVisible = false;
+
+        try
+        {
+            await dBService.UpdateActivityRecordAsync(activityRecord);
+            DialogService.Close(activityRecord);
+        }
+        catch (Exception ex)
+        {
+            errorMessage = ex.Message;
+            errorVisible = true;
+        }
+    }
+
+    protected void CancelButtonClick(MouseEventArgs args) => DialogService.Close(null);
 }
